--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "start": "parallelshell 'npm run watch -s' 'npm run serve -s'"
   },
   "browserify": {
-    "transform": [
-      "reactify",
-      "cssify"
+      "transform": [
+          "cssify",
+      "reactify"
+
     ]
   },
   "author": "Ryan Davis <ryepup@gmail.com>",
@@ -28,12 +29,15 @@
     "http-server": "^0.8.0",
     "live-reload": "^1.1.0",
     "parallelshell": "^1.2.0",
-    "react": "^0.13.3",
-    "react-bootstrap": "^0.24.4",
-    "react-d3": "^0.3.1",
     "react-tools": "^0.13.3",
     "reactify": "^1.1.1",
     "watch": "^0.16.0",
     "watchify": "^3.3.1"
+  },
+    "dependencies": {
+            "react": "^0.13.3",
+    "react-bootstrap": "^0.24.4",
+
+    "react-chartist": "^0.8.0",
   }
 }
