fix package.json syntax errors

--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "dependencies": {
             "react": "^0.13.3",
     "react-bootstrap": "^0.24.4",
-
-    "react-chartist": "^0.8.0",
+    "react-chartist": "^0.8.0"
   }
 }
