--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "watchify": "^3.3.1"
   },
   "dependencies": {
+    "chartist": "^0.9.4",
     "moment": "^2.10.6",
     "numeral": "^1.5.3",
     "react": "^0.13.3",
