--- a/package.json
+++ b/package.json
@@ -34,11 +34,10 @@
     "watchify": "^3.3.1"
   },
   "dependencies": {
-    "chartist": "^0.9.4",
     "moment": "^2.10.6",
     "numeral": "^1.5.3",
     "react": "^0.13.3",
     "react-bootstrap": "^0.24.4",
-    "react-chartist": "^0.8.0"
+    "react-d3": "^0.3.1"
   }
 }
