--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/entry.js",
   "scripts": {
     "test": "exit 1",
-    "build": "browserify src/entry.js -d -o build/bundle.js",
+      "build": "browserify src/entry.js -d | exorcist build/bundle.js.map > build/bundle.js",
+      "postbuild": "minify build/bundle.js > build/bundle.min.js",
     "watch:build": "watchify src/entry.js -d -o build/bundle.js",
     "watch:html": "watch 'cp src/index.html build/' src/",
     "watch": "parallelshell 'npm run watch:build -s' 'npm run watch:html -s'",
@@ -25,8 +26,10 @@
   "devDependencies": {
     "browserify": "^10.2.4",
     "cssify": "^0.7.0",
+    "exorcist": "^0.4.0",
     "http-server": "^0.8.0",
     "live-reload": "^1.1.0",
+    "minify": "^1.4.19",
     "parallelshell": "^1.2.0",
     "react-tools": "^0.13.3",
     "reactify": "^1.1.1",
