--- a/package.json
+++ b/package.json
@@ -16,12 +16,23 @@
   "browserify": {
     "transform": [
       "cssify",
-      "reactify"
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015",
+            "react"
+          ]
+        }
+      ]
     ]
   },
   "author": "Ryan Davis <ryepup@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
     "browserify": "^10.2.4",
     "cssify": "^0.7.0",
     "exorcist": "^0.4.0",
@@ -29,7 +40,6 @@
     "minify": "^1.4.19",
     "parallelshell": "^1.2.0",
     "react-tools": "^0.13.3",
-    "reactify": "^1.1.1",
     "watch": "^0.16.0",
     "watchify": "^3.3.1"
   },
